--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Were Oindo
-#logo:link to png
-#description:text below image
-#show_download:true
+logo: Solo Profile.jpg
+description: text below image
+show_downloads: true
 theme: jekyll-theme-minimal
+
