--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Were Oindo
-logo: Solo Profile.jpg
+logo: /Solo Profile.jpg
 description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
