--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Were Oindo
 logo: /SoloProfile.jpg
-description: text below image
-show_downloads: true
+#description: text below image
+#show_downloads: true
 theme: jekyll-theme-minimal
 
