--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:   
-logo: /SoloProfile.jpg
+logo: /SoloProfil
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
